2009-05-08  Corinna Vinschen  <corinna@vinschen.de>
	    IWAMURO Motonori <deenheart@gmail.com>

	* strfuncs.cc (sys_cp_wcstombs): save and restore previous errno value.
	(sys_cp_mbstowcs): Ditto.

2009-05-08  IWAMURO Motonori <deenheart@gmail.com>

	* strfuncs.cc (sys_cp_wcstombs): Set errno to 0 before converting
	wide char to SO/UTF-8 sequence.

2009-05-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/select.h: Guard definitions with __USE_W32_SOCKETS as
	the accompanying fd_set definitions in newlib's sys/types.h.

2009-05-06  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc (fhandler_console::ioctl): Properly treat
	TIOCLINUX argument as a char.
	* fhandler_tty.cc (fhandler_tty_slave::ioctl): Use coercion to properly
	set char value.

2009-05-06  Corinna Vinschen  <corinna@vinschen.de>

	* libc/minires.c (scanline): Fix type in calls to ctype functions
	to stay in unsigned char range for char values >= 0x80.
	* regex/regcomp.c: Ditto, throughout.
	* regex/regex2.h (ISWORD): Ditto.

2009-05-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (cygheap_init): Set umask to a sane default.
	* uinfo.cc (cygheap_user::ontherange): Don't use HOMEDRIVE/HOMEPATH
	to set HOME.  Default to /home/USERNAME.

2009-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (set_file_sd): Drop using FILE_OPEN_FOR_RECOVERY flag in
	call to NtOpenFile.
	* exceptions.cc (open_stackdumpfile): Ditto in call to NtCreateFile.
	* fhandler.cc (fhandler_base::open): Ditto.  Simplify setting
	create_options.

	* mount.cc (fs_info::update): Recognize offline storage.
	(fillout_mntent): Report UDF and offline storage.
	* mount.h (class fs_info): Add is_csc_cache status flag.

2009-05-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc (fhandler_console::write_console): Eliminate
	unneeded debugging output.
	(fhandler_console::write_normal): Eliminate unneeded __seterrno.

2009-05-04  Christopher Faylor  <me+cygwin@cgf.cx>
